--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@hookform/resolvers": "^3.10.0",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
     "joi": "^17.13.3",
     "lucide-react": "^0.471.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.0",
     "react-router-dom": "^7.1.1",
-    "shadcn-ui": "^0.9.4",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
